--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     </head>
 
     <body>
-        <script src="/js/header.js"></script>
+        <script src="header.js"></script>
         
         <main>
             <div class="main-top">
-                <img src="/img/flower-white.jpg" width="60%" height="auto" />
+                <img src="flower-white.jpg" width="60%" height="auto" />
             </div>
 
             <div class="main-middle">
                 <div class="middle-main-container">
-                    <img src="/img/flower-blue.jpg" width="100%" height="auto" />
+                    <img src="flower-blue.jpg" width="100%" height="auto" />
 
                     
                 </div>
                 <div class="middle-sub-container">
-                    <img src="/img/flower-red.jpg" width="100%" height="auto" />
-                    <img src="/img/flower-yellow.jpg" width="100%" height="auto" />
+                    <img src="flower-red.jpg" width="100%" height="auto" />
+                    <img src="flower-yellow.jpg" width="100%" height="auto" />
                 </div>
             </div>
 
@@ -39,5 +39,5 @@
         </main>
     </body>
 
-    <script src="/js/footer.js"></script> 
+    <script src="footer.js"></script> 
 </html>
