--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 </tr>
                                 <tr style="border:none;">
                                     <td style="border:none;">Java</td>
-                                    <td style="border:none;">6ヶ月<s/td>
+                                    <td style="border:none;">6ヶ月</td>
                                 </tr>
                                 
                                 </tbody>
