--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <script src="/js/header.js"></script>
+        <script src="header.js"></script>
         
         <main>
             <h2>About</h2>
@@ -115,5 +115,5 @@
         </main>
     </body>
 
-    <script src="/js/footer.js"></script> 
+    <script src="footer.js"></script> 
 </html>
