--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
                 <div class ="box3">
                     <p>◆お問合せフォームを作成しました◆</p> 
                     <p>使用言語：PHP, HTML5, CSS3</p>
-                    <img src="php-keijiban.png" width="30%" height="auto" />                
+                    <img src="php-keijiban.jpg" width="30%" height="auto" />                
                 </div>
                 <div class ="box3">   
                     <p>◆ECサイトを作成しました◆</p>
                     <p>使用言語：Java, HTML5, CSS3, JavaScript, SQL</p>
-                    <img src="Java-ECsite.png" width="60%" height="auto" />
+                    <img src="Java-ECsite.jpg" width="60%" height="auto" />
                 </div>
             </div>
         </main>
